Dodanie wysłania wiadomości zawierającej dane o użytkowniku po rejestracji
